--- a/custom.css
+++ b/custom.css
@@ -31,13 +31,15 @@ nav a{
 nav a:hover{
     color:#000080
 }
+
+
 footer {
-  position: fixed;
+  position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: lightsteelblue;
-  
+
   text-align: center;
 }
 /* -----------------------Header---------------------*/
