--- a/custom.css
+++ b/custom.css
@@ -34,8 +34,7 @@ nav a:hover{
 
 
 footer {
-  position: absolute;
-  left: 0;
+  position:static;
   bottom: 0;
   width: 100%;
   background-color: lightsteelblue;
